# pvrtex

./: CMakeLists.txt  Makefile  README  file_common.c  file_common.h  file_dctex.c  file_dctex.h  file_kmg.c  file_kmg.h  file_pvr.c  main.c  mem.c  mycommon.h  nvmath.h  palette.c  pvr_texture.c  pvr_texture_decoder.c  pvr_texture_encoder.c  readme_unformatted.txt
cmake/: GenerateReadme.cmake
